<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.HomeFragment">

    <TextView
        android:id="@+id/WelcomeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/welcome_label"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WelcomeLabel">

        <Button
            android:id="@+id/homeInventoryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="77dp"
            android:layout_marginLeft="77dp"
            android:layout_marginEnd="77dp"
            android:layout_marginRight="77dp"
            android:text="@string/inventory_button" />

        <Button
            android:id="@+id/homeShoppingListButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="77dp"
            android:layout_marginLeft="77dp"
            android:layout_marginEnd="77dp"
            android:layout_marginRight="77dp"
            android:text="@string/shopping_list_button" />

        <Button
            android:id="@+id/homeReceiptButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="77dp"
            android:layout_marginLeft="77dp"
            android:layout_marginEnd="77dp"
            android:layout_marginRight="77dp"
            android:text="@string/receipt_button" />

        <Button
            android:id="@+id/homeChoreListButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="77dp"
            android:layout_marginLeft="77dp"
            android:layout_marginEnd="77dp"
            android:layout_marginRight="77dp"
            android:text="@string/chore_list_button" />

        <Button
            android:id="@+id/homeHouseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="77dp"
            android:layout_marginLeft="77dp"
            android:layout_marginEnd="77dp"
            android:layout_marginRight="77dp"
            android:text="@string/housemate_button" />

        <Button
            android:id="@+id/homeDebtsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="77dp"
            android:layout_marginLeft="77dp"
            android:layout_marginEnd="77dp"
            android:layout_marginRight="77dp"
            android:text="@string/debts_button" />

        <Button
            android:id="@+id/homePastReceiptsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="77dp"
            android:layout_marginLeft="77dp"
            android:layout_marginEnd="77dp"
            android:layout_marginRight="77dp"
            android:text="@string/past_receipts_button" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>