<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/sign_in_Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/sign_in_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="257dp"
        android:layout_height="256dp"
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_Label">

        <TextView
            android:id="@+id/HouseNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/houseName_label" />

        <EditText
            android:id="@+id/houseNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="13"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:completionThreshold="1"/>


        <TextView
            android:id="@+id/HousePasswordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_label" />

        <EditText
            android:id="@+id/HousePasswordEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="13"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:completionThreshold="1"/>


        <Button
            android:id="@+id/NewHouseButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/register_button" />

        <Button
            android:id="@+id/SignInButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/signin_button" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

