<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.ControllerActivity">

    <TextView
        android:id="@+id/shoppingListLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/shopping_list_label"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/shoppingListTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shoppingListLabel" />

    <LinearLayout
        android:layout_width="279dp"
        android:layout_height="298dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shoppingListTextView">

        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_name_label" />

        <AutoCompleteTextView
            android:id="@+id/shoppingListNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="13"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:completionThreshold="1" />

        <TextView
            android:id="@+id/quantityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_qty_label" />

        <EditText
            android:id="@+id/shoppingLIstQtyEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="13"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/shoppingListAddItemButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_item_button" />

        <Button
            android:id="@+id/shoppingListRmItemButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/rm_item_button" />

        <Button
            android:id="@+id/shoppingListInventoryButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/inventory_button" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>