<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".controller.ControllerActivity">

    <TextView
        android:id="@+id/choreListLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chore_list_label"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/choreListTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choreListLabel" />

    <LinearLayout
        android:layout_width="279dp"
        android:layout_height="348dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choreListTextView">

        <TextView
            android:id="@+id/choreNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chore_label" />

        <AutoCompleteTextView
            android:id="@+id/choreEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="13"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:completionThreshold="1"/>

        <TextView
            android:id="@+id/ownerNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/owner_label" />

        <AutoCompleteTextView
            android:id="@+id/ownerEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="13"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:completionThreshold="1" />

        <TextView
            android:id="@+id/assignerNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assigner_label" />

        <AutoCompleteTextView
            android:id="@+id/assignerEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="13"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:completionThreshold="1" />

        <Button
            android:id="@+id/choreAddButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_chore_button" />

        <Button
            android:id="@+id/choreRmButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/remove_chore_button" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>