<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ReceiptAddItemFragment">

    <TextView
        android:id="@+id/receiptLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receipt_label"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/receiptAddItemTextView">

        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_name_label" />

        <AutoCompleteTextView
            android:id="@+id/receiptAddItemNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="13"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:completionThreshold="1" />

        <TextView
            android:id="@+id/quantityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_qty_label" />

        <EditText
            android:id="@+id/receiptAddItemQtyEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="13"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/priceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_price_label" />

        <EditText
            android:id="@+id/receiptAddItemPriceEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="13"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="48dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/receiptAddItemAddButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:minHeight="56dp"
                android:text="@string/add_item_button" />

            <Button
                android:id="@+id/receiptAddItemRmButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:minHeight="56dp"
                android:text="@string/rm_item_button" />
        </LinearLayout>

        <Button
            android:id="@+id/receiptAddItemDoneButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:minHeight="56dp"
            android:text="@string/done_receipt_button" />

    </LinearLayout>

    <TextView
        android:id="@+id/receiptAddItemTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/receiptLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>